# main-be

./: .dockerignore  .env.example  .gitignore  Caddyfile  Container  Taskfile.yml  alembic.ini  compose.prod.yml  compose.yml  config.toml  pyproject.toml
.github/workflows/: deploy.yml  rollback.yml
migrations/: env.py
migrations/versions/: 0a5f02c6eb53_make_expired_at_field_be_zone_aware.py  26e004ae4c79_add_totals_to_days_table.py  382d5b26955c_add_3_new_tables_for_the_new_calorie_app.py  40472044e26b_make_code_field_of_verification_codes_.py  45d651d25b98_remove_user_id_field_as_pk.py  4d598c3fe30a_add_new_table_apps.py  582a8853356c_add_avatar_field_to_users_table.py  70bf4abe4060_add_verification_codes_table.py  71c330370dd0_add_new_field_additional_calories_to_.py  7a9d06f62d10_add_auto_updated_at.py  9f718dcd0a19_add_users_table.py  c11fbb840c57_add_3_new_tables_for_the_new_calorie_app.py  d15b840c21d5_change_type_of_weight_field_in_day_.py  d29c683628af_enable_pg_trgm_and_trigram_index_on_.py  f280cd8131e3_add_new_is_verified_field_to_users_table.py
nginx/: default.conf
src/: database.py  main.py  models.py  repository.py  unitofwork.py  utils.py
src/app/: models.py  orm.py  repositories.py  router.py  services.py
src/auth/: exceptions.py  models.py  orm.py  repositories.py  router.py
src/calorie/: models.py  orm.py  repositories.py  router.py
src/clients/: s3.py
src/config/: __init__.py  containers.py  dependencies.py  settings.py
src/notification/: models.py  orm.py  repositories.py
templates/: email-verification.html
(+12 files in other folders)
